--- a/index.html
+++ b/index.html
@@ -24,6 +24,38 @@
           </div>
         </div>
       </div>
+
+      <div class="main-header container">
+        <div class="logo-and-nav">
+          <a href="index.html" class="logo">Exclusive</a>
+
+          <nav>
+            <ul class="nav-list">
+              <li class="list-items">
+                <a href="index.html">Home</a>
+              </li>
+              <li class="list-items">
+                <a href="index.html">Contact</a>
+              </li>
+              <li class="list-items">
+                <a href="index.html">Abous Us</a>
+              </li>
+              <li class="list-items">
+                <a href="index.html">Sign Up</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="search-and-cart">
+          <div class="search-section">
+            <p class="search-text">What are you looking for?</p>
+            <img src="images/Vector.svg" alt="search" />
+          </div>
+
+          <img src="images/wishlist.svg" alt="wishlist" class="wishlist" />
+          <img src="images/Cart.svg" alt="cart" class="cart" />
+        </div>
+      </div>
     </header>
   </body>
 </html>
