--- a/index.html
+++ b/index.html
@@ -57,5 +57,48 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="main-content container">
+        <div class="categories-filter">
+          <ul class="filters-lists">
+            <li>
+              <a href="#">woman's fashion</a>
+            </li>
+            <li>
+              <a href="#">men's fashion</a>
+            </li>
+            <li>
+              <a href="#">electronics</a>
+            </li>
+            <li>
+              <a href="#">Home & Lifestyle</a>
+            </li>
+            <li>
+              <a href="#">Medicine</a>
+            </li>
+            <li>
+              <a href="#">Sports & Outdoor</a>
+            </li>
+            <li>
+              <a href="#">Health & Beauty</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="product-banner">
+          <div class="text-section">
+            <div class="iphone-series">
+              <img src="images/apple.svg" alt="apple" />
+              <h2>iPhone 14 Series</h2>
+            </div>
+
+            <h1>Up to 10% off Voucher</h1>
+          </div>
+          <div class="image-section">
+            <img src="images/main-page.png" alt="iphone 14" />
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
